# PortDoc-AI

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
data/corpus/: chunks.jsonl  manifest.yaml
data/eval/: qa_dataset.json
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Chat.tsx  ConversationList.tsx  DocumentLibrary.tsx  EvalView.tsx  MessageBubble.tsx  Roadmap.tsx  Sidebar.tsx  SourceCard.tsx  SourceDrawer.tsx  Toast.tsx  ValueRibbon.tsx  types.ts  ui.tsx  useConversations.ts
frontend/lib/: api.ts
results/: generation.json  generation.md  leakage.json  leakage.md  ocr_bakeoff.md  sweep.json  sweep.md
scripts/: make_scan.sh
src/portdoc/: __init__.py  config.py
src/portdoc/api/: main.py  personas.py  schemas.py
src/portdoc/eval/: generation_eval.py  make_dataset.py  retrieval_metrics.py  run.py
src/portdoc/generation/: answer.py  citations.py  llm.py  prompts.py
src/portdoc/index/: embed.py  store.py
src/portdoc/ingestion/: chunk.py  fetch.py  manifest.py  ocr_bakeoff.py  parse.py
src/portdoc/retrieval/: pipeline.py  rerank.py
tests/: test_chunk.py  test_citations.py  test_fetch.py  test_index.py  test_manifest.py  test_metrics.py  test_parse.py  test_retrieval.py
