[project]
name = "portdoc"
version = "0.1.0"
description = "PortDoc AI — sovereign RAG over port security & operational documents"
readme = "README.md"
requires-python = ">=3.12"

# Dependencies are added slice-by-slice so the env stays light and each install
# is explainable. Slice 1 needs only config + manifest + fetch.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    # --- slice 2: parsing + OCR ---
    "docling>=2.102",
    "pypdfium2>=4.30",          # fast per-page text probe for scanned-vs-digital routing
    "rapidocr-onnxruntime>=1.4", # OCR engine for the bake-off (lightweight, onnx)
    "onnxruntime>=1.18",
    "easyocr>=1.7",             # Docling's default OCR — included so we can measure it
    # --- slice 4: embeddings + vector DB ---
    "qdrant-client>=1.12",
    "sentence-transformers>=3.0", # dense encoder (Qwen3-Embedding)
    "FlagEmbedding>=1.3",         # sparse encoder (bge-m3 learned lexical weights)
    "fastembed>=0.8.0",
    "litellm>=1.88.1",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

# CPU-only torch: this is a machine without an NVIDIA GPU, so pull the CPU wheels
# instead of the ~2 GB CUDA build that docling/easyocr would otherwise drag in.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portdoc"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Heavy integration tests (load docling/models) are opt-in: `pytest -m slow`.
addopts = "-m 'not slow'"
markers = ["slow: integration tests that load heavy models / real corpus"]
